--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                                     <input type="email" name="" placeholder="Message" required id="" class="form-control">
                                 </div>
                             </div>
-                            <input type="submit" value="Send" class="btn pull-right s-full-width mt-16">
+                            <input type="submit" value="Send" class="contac-submit-btn btn pull-right s-full-width mt-16">
                                 
                         </form>
 
